test/commands/devops/mdsource/compare/force-apps/testCustomObject/orgmdt/objects/Same.object
<CustomObject>
    <fields>
        <fullName>Same__c</fullName>
        <description>Should be the same,
even through newlines
        </description>
        <formula>formula should correctly continue
through newlines </formula>
        <label>Absolute Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Same_Picklist__c</fullName>
        <label>Same Picklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2 Inactive</fullName>
                    <isActive>false</isActive>
                    <label>Value 2 Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <label>Absolute Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Changed__c</fullName>
        <label>Absolute Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Removed__c</fullName>
        <label>Absolute Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Same</fullName>
        <active>true</active>
        <label>Same</label>
    </recordTypes>
    <recordTypes>
        <fullName>Changed</fullName>
        <active>true</active>
        <label>Changed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Src</fullName>
        <active>true</active>
        <label>Src</label>
    </recordTypes>
    <recordTypes>
        <fullName>Org</fullName>
        <active>true</active>
        <label>Org</label>
    </recordTypes>
</CustomObject>